# AgentMem

./: .gitignore  EXECUTION_PLAN_DEV_A.md  README.md  test_e2e.py  test_persistence.py
core/: Cargo.toml  build.rs
core/cpp/: embedder.cpp  embedder.h  tokenizer.h
core/examples/: smoke.rs
core/proto/: agentmem.proto
core/src/: episodic.rs  error.rs  lib.rs  namespace.rs  semantic.rs  server.rs  storage.rs  structured.rs  ttl.rs
core/tests/: storage_smoke.rs  ttl_smoke.rs
sdk/python/: Cargo.toml  pyproject.toml
sdk/python/agentmem/: __init__.py  memory.py
sdk/python/agentmem/_grpc/: __init__.py  agentmem_pb2.py  agentmem_pb2_grpc.py
sdk/python/agentmem/integrations/: __init__.py  agentid.py
sdk/python/src/: lib.rs
sdk/typescript/: bunfig.toml  index.html  package.json  proxy_server.ts  tsconfig.json  vite.config.ts
sdk/typescript/cli/: index.ts
sdk/typescript/src/: App.tsx
sdk/typescript/src/api/: client.ts
sdk/typescript/src/components/: EpisodeTimeline.tsx  KvInspector.tsx  MemoryExplorer.tsx
