[package]
name = "agentmem-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "agentmem_core"
crate-type = ["rlib"]

[dependencies]
cxx = "1.0"
rocksdb = "0.21"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
tempfile = "3"
